demo-manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-ns
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: demo-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: htpasswd
    nginx.ingress.kubernetes.io/auth-realm: "Restricted Area"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "balanced"
    nginx.ingress.kubernetes.io/session-cookie-name: "route-one"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/enable-real-ip: "true"
    nginx.ingress.kubernetes.io/forwarded-for-header: "true"
    nginx.ingress.kubernetes.io/compute-full-forwarded-for: "true"
    nginx.ingress.kubernetes.io/proxy-add-original-uri-header: "true"
    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/whitelist-source-range: 146.70.52.86/32
spec:
  tls:
    - hosts:
        - test.msftcnsi.com
      secretName: letsencrypt
  rules:
    - host: test.msftcnsi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo-ns
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  namespace: demo-ns
  labels:
    app: demo
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
        - name: demo
          image: ammnt/demo@sha256:cdd936dfd06a697fdf93fe3843a05b0c09508023461625824057617015103487
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            imagePullPolicy: Always
          ports:
            - containerPort: 8443
          resources:
            requests:
              cpu: 256m
              memory: 250Mi
            limits:
              cpu: 512m
              memory: 500Mi
          startupProbe:
            exec:
              command:
                - cat
                - /app/properties/application.properties
            initialDelaySeconds: 30
            failureThreshold: 10
            periodSeconds: 2
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
              httpHeaders:
                - name: Host
                  value: test.msftcnsi.com
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
              httpHeaders:
                - name: Host
                  value: test.msftcnsi.com
          volumeMounts:
            - name: demo-properties
              mountPath: /app/properties
              readOnly: true
      volumes:
        - configMap:
            defaultMode: 256
          name: demo-properties
